prevent navbar from clipping

--- a/static/styles.css
+++ b/static/styles.css
@@ -15,7 +15,7 @@ body{
     display: flex;
     justify-content: flex-end;
 
-    z-index: 1;
+    z-index: 999;
 }
 
 .flex-grow{
